@@ -1,15 +1,15 @@
 # Maintainer : Rémy Oudompheng <remy@archlinux.org>
 
 pkgname=pyalpm
-pkgver=0.4
-pkgrel=2
+pkgver=0.4.1
+pkgrel=1
 pkgdesc="Libalpm bindings for Python 3"
 arch=('i686' 'x86_64')
 url="http://projects.archlinux.org/users/remy/pyalpm.git/"
 license=('GPL')
-depends=('python>=3.2' 'pacman>=3.5')
+depends=('python>=3.2' 'pacman<3.6')
 source=("ftp://ftp.archlinux.org/other/pyalpm/$pkgname-$pkgver.tar.gz")
-md5sums=('877b46d6ba98e398d9f1a22894319f7d')
+md5sums=('a77f417bb65f5c2de28c46066b45fa18')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
